# monte

./: Makefile  README.md  docker-compose-dev.yml  docker-compose.yml
microapi/: .gitignore  Makefile  compose.sh  docker-compose.prod.yml  docker-compose.yml  prod.sh  test.sh
microapi/backend/: Dockerfile  aerich.ini  pyproject.toml
microapi/backend/apps/users/: api.py  models.py  schemas.py  services.py
microapi/backend/core/: abstract_models.py  main.py  utils.py
microapi/backend/core/config/: settings.py
microapi/backend/migrations/models/: 0_20230504200758_init.py
microapi/nginx/: dev.conf  nginx.conf
microgames/: .gitignore  Dockerfile  README.md  pyproject.toml
microgames/src/: main.py
microgames/src/balance_client/: balance_client_pb2.py  balance_client_pb2_grpc.py
microgames/src/coinflip/: coinflip_pb2.py  coinflip_pb2_grpc.py  coinflip_server.py  utils.py
microgames/src/proto/: balance_client.proto  coinflip.proto  roulette.proto
microgames/src/roulette/: roulette_controller.py  roulette_pb2.py  roulette_pb2_grpc.py  roulette_server.py
micronotif-balance/: .gitignore  pyproject.toml
micronotif-balance/src/: main.py  utils.py
micronotif-balance/src/balance/: balance_pb2.py  balance_pb2_grpc.py  balance_server.py
microsockets/: Makefile  README.md  docker-compose-dev.yml  docker-compose.yml  go.work  go.work.sum
microsockets/src/: Dockerfile  DockerfileDev  air.toml  go.mod  go.sum  main.go
microsockets/src/api/: server.go  trades.go  websocket.go
microsockets/src/core/: grpc.go  websocket.go
microsockets/src/grpc/coinflip/: coinflip.pb.go  coinflip_grpc.pb.go
microsockets/src/grpc/roulette/: roulette.pb.go  roulette_grpc.pb.go
microsockets/src/proto/: coinflip.proto  roulette.proto
microsockets/src/types/: chat.go  coinflip.go  roulette.go  websocket.go
microsockets/src/utils/: utils.go
microsockets/src/validators/: validator.go
